--- a/doc/TODO
+++ b/doc/TODO
@@ -1,3 +1,7 @@
+Needed Functionality:
+
+	- Show outstanding balances
+	- Tag Lab Orderer
 Features:
 
 	- Scroll to other days in the patient queue
