--- a/doc/TODO
+++ b/doc/TODO
@@ -9,7 +9,7 @@
 	-Patient Queue
 		X Scroll to other days in the patient queue
 	-Patient Info
-		!- Can't edit age when actual birthdate used.
+		X Can't edit age when actual birthdate used.
 		!- Need to be able to specify reason detail when scheduling walk-ins
 		- Edit Scheduled Visits
 		- Delete Sceduled Visits
