--- a/doc/TODO
+++ b/doc/TODO
@@ -9,11 +9,11 @@
 	-Patient Queue
 		X Scroll to other days in the patient queue
 	-Patient Info
-		X Can't edit age when actual birthdate used.
-		!- Need to be able to specify reason detail when scheduling walk-ins
 		- Edit Scheduled Visits
 		- Delete Sceduled Visits
 		- Edit Village Name
+		X Can't edit age when actual birthdate used.
+		X- Need to be able to specify reason detail when scheduling walk-ins
 	-Med Queue
 		- 
 	-Record
