added OpenVPN check note

--- a/doc/TODO
+++ b/doc/TODO
@@ -22,6 +22,7 @@
 	- MySQL Replication Setup
 	- MySQL Replication Testing
 	- Printing Issues !!!
+	- Double Check OpenVPN Config and Certificates
 
 -Infrastructure
 	- Test Failure states of server
