--- a/doc/TODO
+++ b/doc/TODO
@@ -3,13 +3,17 @@
 		- Force Popup to foreground?
 	-Reports
 		X Add Reports to main menu
+		- Daily/Weekly Cash Flow Report
 		- Show Outstanding Balances
 		- Legacy Monthly Report
 		- 
 	-Patient Queue
 		X Scroll to other days in the patient queue
+	-Chart
+		- Edit entered prescriptions before patient is finished
 	-Patient Info
-		- Show Account $tatu$ / collect fees per visit.
+		1)- Make seperate section for scheduled patients.
+		2)- Show Account $tatu$ / collect fees per visit.
 		X Edit reasonDetail for Visits
 		X Delete Sceduled Visits
 		X Edit Village Name
@@ -20,11 +24,11 @@
 	-Record
 		X Add Clinician Tag to Record
 -Administration
-	- MySQL Replication Setup
-	- MySQL Replication Testing
-	- Printing Issues !!!
+	X MySQL Replication Setup
+	X MySQL Replication Testing
+	? Printing Issues !!!
 	- Double Check OpenVPN Config and Certificates
 
 -Infrastructure
 	- Test Failure states of server
-	- Battery Backup ?
+	X Battery Backup ?
