update TODO list

--- a/doc/TODO
+++ b/doc/TODO
@@ -2,7 +2,7 @@
 	-General
 		- Force Popup to foreground?
 	-Reports
-		- Daily/Weekly Cash Flow Report
+		X Daily/Weekly Cash Flow Report
 		- Show Outstanding Balances
 		- Legacy Monthly Report
 		- 
