added outstanding balances report

--- a/doc/TODO
+++ b/doc/TODO
@@ -3,7 +3,7 @@
 		- Force Popup to foreground?
 	-Reports
 		X Daily/Weekly Cash Flow Report
-		- Show Outstanding Balances
+		X Show Outstanding Balances
 		- Legacy Monthly Report
 		- 
 	-Patient Queue
