--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,5 @@
+v0.3.3 -
+	- CHANGE: added a print link to the view record pop-up.
 v0.3.2 -
 	- CHANGE: admin site to make management easier...
 v0.3.1 -
