--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,5 @@
+v0.3.4 -
+	- CHANGE: added age range restriction options to diagnosis tally report.
 v0.3.3 -
 	- CHANGE: added a print link to the view record pop-up.
 v0.3.2 -
