Cleaned up TODO file.

--- a/doc/TODO
+++ b/doc/TODO
@@ -4,8 +4,4 @@
 			( could also move to a DHTML window instead...)
 	-Reports
 		- Legacy Monthly Report
-	-Patient Queue
-	-Chart
-	-Patient Info
-	-Med Queue
-	-Record
+			( This still required? )
