Mark in TODO as finished, add to changelog: Gender edit functionality

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 -Functionality Requests
 	-Patient Demographics:
-		- edit the sex of our patients
+		X edit the sex of our patients
 			(in case we make a mistake while registering them)
 		- collect contact information?
 			- phone number
