--- a/doc/tex/user_manual-administration.tex
+++ b/doc/tex/user_manual-administration.tex
@@ -1,8 +1,6 @@
-This Chapter will explain in detail how to manage the users for your OCEMR
-system. However, before we get into the details of doing that, we need to
-go over a few very important things.
+This Chapter will explain in detail how to manage your OCEMR system.
 
-\section{Precautions}
+\section{Introduction}
 
 Managing users will be done through the application’s admin interface.
 The admin interface can be extremely powerful and helpful, but also
@@ -29,22 +27,85 @@ record. Without the patient record, all those other records are
 useless\footnote{ in computer term they are ‘orphans’ because their
 ‘parents’ have disappeared } and will be deleted along with it.
 
-  In the case of the patient record, this makes sense, but consider that
-most of the records in the system link back to a user. Thus if you delete
-a user, everything record in the system that that user added would also be
-deleted. \textbf{BOTTOM LINE IS}:
+\subsection{Navigating to the Admin Interface}
+
+The admin interface is easy to find. When you have sufficient rights
+to the interface, a link will appear in the main menu bar title \em{Admin}.
+Just click it to enter the admin site.
+
+  The admin interface looks like this: <SCREENSHOT>
+
+\section{User Management}
 
 \textbf{NEVER DELETE A USER FROM THE SYSTEM!} (Just disable the user instead.)
 
-\section{Navigating to the Admin Interface}
+\subsection{Adding Users}
+\subsubsection{Information Required}
 
-The admin interface is not straight forward to get to. There is
-currently\footnote{ v0.4.0 plans are to display a link for users
-that have access in an upcoming release. } no link from the main
-interface. You need to modify the link in your browser.
+  To add users you will need the following information:
 
 \begin{enumerate}
-\item Log into the system.
-\item in the Address Bar of your browser you will see something like: \url{http://ocemr.server.com/patient_queue/}.
-\item change it to: \url{http://ocemr.server.com/admin/}
+
+\item Username
+
+Select a username that is easy to remember for the user and also allows
+everyone using the system to know who that name represents. \em{Usernames
+should be all lowercase}.
+
+\item Password
+
+Tell the user to think of a password that they can remember and is not
+easy for others to guess. The password can be reset at a later date by
+anyone who has access to the user management functions of the admin
+interface.
+
+\item First and Last Name
+
+The System will need this information especially when generating medical
+records. It is important that this is added for the proper operation.
+
+\item Email Address
+
+In general it would be good practice to record a contact email address
+here in case we need to get a hold of the user in the future or a place
+to send login details or documentation.
+
 \end{enumerate}
+
+\subsubsection{Adding the User}
+\begin{enumerate}
+\item Click on \em{+Add} on the Main Admin page
+\item Enter the Username and Password, then click on Save.
+\item Next, Add the First Name, Last Name, and Email Address. Do NOT
+Change any of the Permissions\footnote{Only Administrators need Staff status
+and nobody should be given Superuser status. This will protect the
+system from accidental data corruption.}!
+\item Scroll down to the bottom of the screen and click on \em{Save}.
+\end{enumerate}
+
+You will see the new user in the list.
+
+\subsection{Changing Passwords}
+
+  The users currently do not have support for changing their own
+passwords\footnote{This is slated for an upcoming release}, so as an
+administrator for the system you may have to reset their password.
+
+\begin{enumerate}
+\item Click on \em{Change} from the Main Admin Page
+\item Select the User you want to edit by clicking on the username.
+\item Select \em{change password form}.
+\item Enter the new password twice, and click \em{Change Password}.
+\end{enumerate}
+
+\subsection{Disabling Users}
+
+  TODO: Explain when and why you should disable accounts.
+
+\begin{enumerate}
+\item Click on \em{Change} from the Main Admin Page
+\item Select the User you want to edit by clicking on the username
+\item Uncheck the \em{Active} box under permissions.
+\item Scroll down to the bottom of the page and click \em{Save}.
+\end{enumerate}
+
