--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,6 @@
+v0.4.1 -
+	- Added error templates for 404 500 errors
+	- Fixes for graphing in production
 v0.4.0 -
         - Updated code to run on python 2.6 and DJANGO 1.2.3
         - Cleaned up and documented default config file (settings.py)
