organizing the new user manual.

--- a/doc/tex/user_manual-getting_started.tex
+++ b/doc/tex/user_manual-getting_started.tex
@@ -3,7 +3,7 @@
 In this section we will go over exactly what this manual intends to cover.
 
 \subsection{Versions}
-This manual covers OCEMR v0.3.2 through v0.3.4.
+This manual covers OCEMR v0.4.X and superseeds previous documentation
 
 While we attempt to mention all the differences between the versions
 covered in this manual, there may be ommisions.
@@ -14,17 +14,16 @@ covered in this manual, there may be ommisions.
 
 
 \subsection{Feature Requests and Bugs}
-Feature requests and bugs can be submitted via github at
-\url{https://github.com/ph1l/ocemr/issues} or if you prefer you
-can email the creator and maintainer
+Feature requests and bugs can be submitted via the projects bugzilla site at
+\url{https://bugs.kremlor.net/} or you can email the creator and maintainer
 Philip Freeman $<$\href{mailto:philip.freeman@gmail.com}{philip.freeman@gmail.com}$>$.
 
 \subsection{What's in a Browser}
 TODO:
 
 \section{Logging IN}
-Once the system, OCEMR is located the
-page will request the user to fill out the user name and password.
+Once OCEMR is loaded in a supported browser, the
+system will require the user to fill out the user name and password.
 Every user has a unique user name and password. The user name and
 password are both case sensitive. If a user originally used only lower
 case letters when the user was first created, the user will only be
