--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,17 @@
 ocemr (0.5.0) unstable; urgency=low
 
-  * Initial Release.
+  * cost estimation (assign cost in labtype and medtype)
+  * track alternate contact info for patients
+  * add pulse oximetry and oxygen vitals
+  * patient navigation and search enahancements
+  * "Admin" panel moved to user prefs page
+  * disable types (lab, med, diagnosis) in Data Admin Panel
+  * database backup for staff
+  * debianized
+  * FIX: dupe Diags with multiple user claim of visit.
+  * FIX: word wrap issue in view/print record
+  * FIX: daily pt report: pt # of month wrong in dec
+  * FIX: record uses visit finished date 
+
 
  -- Philip Freeman <philip.freeman@gmail.com>  Sat, 17 Mar 2012 00:43:18 -0500
