--- a/README
+++ b/README
@@ -19,7 +19,7 @@ Project Links
 -------------
 
  * Home Page		: http://kremlor.net/projects/ocemr
- * Bug/Feature Tracking	: http://bugs.kremlor.net
+ * Bug/Feature Tracking	: https://github.com/ph1l/ocemr/issues
  * Author		: Philip Freeman <philip.freeman@gmail.com>
 
 
@@ -65,14 +65,14 @@ the OCEMR project since it's infancy. Together, we have taken the project
 from a campfire discussion in the summer of 2010 to live production at the
 turn of 2011.
 
- I would like to thank my fiancee, Carly Gielarowski, for her help and
-tireless support throughout this process. Her experience using EMR
-programs in the U.S. consumer health care industry was a guiding resource
-in the early and middle design stages of the poject. She was also
-responsible for the testing and documentation in the final stages of
-deployment on-site. She continues to help me as we move the project
-forward toward our further goals of making the system more robust
-and applicable to other clinic installations.
+ I would like to thank Carly Gielarowski, for her help and tireless
+support throughout this process. Her experience using EMR programs in
+the U.S. consumer health care industry was a guiding resource in the
+early and middle design stages of the poject. She was also responsible
+for the testing and documentation in the final stages of deployment
+on-site. She continues to help me as we move the project forward toward
+our further goals of making the system more robust and applicable to
+other clinic installations.
 
  I would also like to thank my sister-in-law, Kathy Z. Chang - MD / MPH,
 for her help in the late stages of design and implementation on the project.
