--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,6 @@
+v0.5.0.1 -
+  * recipient list for backup encryption fix.
+  * GPG Server Key Generation moved out of postinst.
 v0.5.0 -
   * add vaccination tracking tab on chart.
   * cost estimation (assign cost in labtype and medtype)
