--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ ocemr (0.5.0+nmu1) unstable; urgency=low
   * BUG: recipient list for backup encryption fix.
   * BUG: GPG Server Key Generation moved out of postinst.
   * document GPG settings in settings.py
+  * Type doesn't exist form errors in Diagnosis and Med forms.
 
  -- Philip Freeman <philip.freeman@gmail.com>  Mon, 26 Mar 2012 22:56:41 -0500
 
