--- a/debian/README
+++ b/debian/README
@@ -3,4 +3,4 @@ The Debian Package ocemr
 
 Comments regarding the Package
 
- -- Philip Freeman <philip.freeman@gmail.com>  Sat, 17 Mar 2012 00:43:18 -0500
+ -- Philip J Freeman <philip.freeman@gmail.com>  Sat, 17 Mar 2012 00:43:18 -0500
