--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ocemr (0.5.3.2) stable; urgency=low
+
+  * Re-arrange reports
+  * fix versioning
+
+ -- Philip J Freeman <philip.freeman@gmail.com>  Thu, 13 Dec 2012 14:15:12 -0600
+
 ocemr (0.5.3.1) stable; urgency=low
 
   * don't backup the session table
