--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ocemr (0.7.0) stable; urgency=low
+
+  * e79bb0d Medication tally report unit count
+  * dd0236a Advertisement customization
+
+ -- Pat Freeman <github@e2r4.com>  Fri, 21 Jan 2022 16:32:47 -0600
+
 ocemr (0.6.1) stable; urgency=medium
 
   * afdcc05 Finish the upgrade to jquery-ui autocomplete
