--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ocemr (0.7.1) stable; urgency=medium
+
+  * fix med tally report on empty count
+
+ -- Pat Freeman <github@e2r4.com>  Thu, 19 May 2022 20:46:10 -0500
+
 ocemr (0.7.0) stable; urgency=low
 
   * e79bb0d Medication tally report unit count
