--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ocemr (0.8.0) stable; urgency=low
+
+  * Add a medication price list PDF to the reports
+
+ -- Pat Freeman <github@e2r4.com>  Sat, 29 Oct 2022 15:26:15 -0500
+
 ocemr (0.7.1) stable; urgency=medium
 
   * fix med tally report on empty count
